# colorpycker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
package/src/colorpycker/: __main__.py  floatingwidget.py
src/colorpycker/: __init__.py  __main__.py  config.py  floatingwidget.py  historywindow.py  screenshot.py
